# kaputnik

./: .gitignore  README.md
fw/: CMakeLists.txt
fw/src/: config.h  main.c  mpu6500.c  mpu6500.h  w25q64.c  w25q64.h  ws2812.c  ws2812.h
src/: main.c  mpu6500.c  w25q64.c
sw/: Cargo.toml
sw/src/: main.rs
